2004-12-09 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicomSeq.cxx : bug fix
 
2004-12-08 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmReader.[h|cxx] : bug fix. Plane order isn't inverted
   * vtk/vtkGdcmWriter.[h|cxx] : correctly write images (the Y axis is inverted)
   * Test/ShowDicomSeq.cxx : new test to verify the use of AddFileName method
   * Test/ShowDicom.cxx, TestWriteWithVTK.cxx : set the threshold of regression
     test to 0.0
   * Test/TestCopyRescaleDicom.cxx : remove unused variable
   * Test/CMakeLists.txt : add the creation of the gdcmDataSeqImages.h file
     containing found sequences

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx, TestWriteWithVTK.cxx : bug fix, now this test pass
     not at all time
   * Test/TestCopyRescaleDicom.cxx : rearrange the test to correctly pass...
     Some fields in BinEntry must be copied to not seg fault when making the :
              gdcm::File *copy     = new gdcm::File( copyH );
     and tests are now made on good variables

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter.[h|cxx] : add a first version of vtkGdcmWriter
   * src/gdcmValEntry.cxx : bug fix when setting the value. Problems of odd
     length
   * src/gdcmHeader.cxx : Remove a useless call to Util::DicomString
   * Add vtkGdcmWriter example and test

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/TestUtil.cxx : reformat the source code
   * vtk/vtkGdcmReader.cxx : remove and change prints
   * src/gdcmValEntry.[cxx|h] : now set the length of the value when calling
     SetValue
   * src/gdcmBinEntry.[cxx|h] : SetValue method don't set the length
   * src/*.cxx : remove all useless call to SetLength of a ValEntry object

2004-12-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmPixelWriteConvert.[h|cxx] : ficnished this class